--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
     <!-- Plugins versions -->
     <!-- **************** -->
     <version.antrun.plugin>1.3</version.antrun.plugin>
-    <!-- Bad perfs with 2.2-beta-X :  -->
+    <!-- Bad perfs with 2.2-beta-X, do not uprade assembly plugin for now  -->
     <version.assembly.plugin>2.1</version.assembly.plugin>
     <version.buildhelper.plugin>1.5</version.buildhelper.plugin>
     <version.buildnumber.plugin>1.0-beta-4</version.buildnumber.plugin>
@@ -491,6 +491,28 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>buildnumber-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>initialize</phase>
+            <goals>
+              <goal>create</goal>
+            </goals>
+            <configuration>
+              <format>{0,number}.{1,number}</format>
+              <items>
+                <item>buildNumber0</item>
+                <item>buildNumber1</item>
+              </items>
+              <buildNumberPropertyName>exo.product.specification</buildNumberPropertyName>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
   </build>
   <profiles>
     <profile>
