PAR-141 : Always put SCM revision in MANIFEST but populate it only in release profile

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
   <properties>
     <exo.product.name>${project.name}</exo.product.name>
     <exo.product.specification>N/A</exo.product.specification>
+    <exo.product.scm.revision>N/A</exo.product.scm.revision>
     <!-- **************** -->
     <!-- Plugins versions -->
     <!-- **************** -->
@@ -253,6 +254,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
+                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${exo.product.specification}</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -272,6 +274,26 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-ejb-plugin</artifactId>
           <version>${version.ejb.plugin}</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              </manifest>
+              <manifestEntries>
+                <Date>${maven.build.timestamp}</Date>
+                <Implementation-URL>${project.url}</Implementation-URL>
+                <SCM-URL>${project.scm.connection}</SCM-URL>
+                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
+                <Specification-Title>${exo.product.name}</Specification-Title>
+                <Specification-Version>${exo.product.specification}</Specification-Version>
+                <Specification-Vendor>${project.organization.name}</Specification-Vendor>
+                <Implementation-Title>${project.name}</Implementation-Title>
+                <Implementation-Version>${project.version}</Implementation-Version>
+                <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
+              </manifestEntries>
+            </archive>
+          </configuration>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -332,6 +354,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
+                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${exo.product.specification}</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -361,6 +384,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
+                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${exo.product.specification}</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -445,6 +469,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
+                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${exo.product.specification}</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -479,6 +504,7 @@
                 <Date>${maven.build.timestamp}</Date>
                 <Implementation-URL>${project.url}</Implementation-URL>
                 <SCM-URL>${project.scm.connection}</SCM-URL>
+                <SCM-Revision>${exo.product.scm.revision}</SCM-Revision>
                 <Specification-Title>${exo.product.name}</Specification-Title>
                 <Specification-Version>${exo.product.specification}</Specification-Version>
                 <Specification-Vendor>${project.organization.name}</Specification-Vendor>
@@ -497,6 +523,7 @@
         <artifactId>buildnumber-maven-plugin</artifactId>
         <executions>
           <execution>
+            <id>generate-specification-version</id>
             <phase>initialize</phase>
             <goals>
               <goal>create</goal>
@@ -590,82 +617,23 @@
     <profile>
       <id>release</id>
       <build>
-        <pluginManagement>
-          <plugins>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-ear-plugin</artifactId>
-              <configuration>
-                <archive>
-                  <!-- Additional entries in Manifest -->
-                  <manifestEntries>
-                    <SCM-Revision>${buildNumber}</SCM-Revision>
-                  </manifestEntries>
-                </archive>
-              </configuration>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-jar-plugin</artifactId>
-              <configuration>
-                <archive>
-                  <!-- Additional entries in Manifest -->
-                  <manifestEntries>
-                    <SCM-Revision>${buildNumber}</SCM-Revision>
-                  </manifestEntries>
-                </archive>
-              </configuration>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-javadoc-plugin</artifactId>
-              <configuration>
-                <archive>
-                  <manifestEntries>
-                    <SCM-Revision>${buildNumber}</SCM-Revision>
-                  </manifestEntries>
-                </archive>
-              </configuration>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-source-plugin</artifactId>
-              <configuration>
-                <archive>
-                  <!-- Additional entries in Manifest -->
-                  <manifestEntries>
-                    <SCM-Revision>${buildNumber}</SCM-Revision>
-                  </manifestEntries>
-                </archive>
-              </configuration>
-            </plugin>
-            <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-war-plugin</artifactId>
-              <configuration>
-                <archive>
-                  <!-- Additional entries in Manifest -->
-                  <manifestEntries>
-                    <SCM-Revision>${buildNumber}</SCM-Revision>
-                  </manifestEntries>
-                </archive>
-              </configuration>
-            </plugin>
-          </plugins>
-        </pluginManagement>
         <plugins>
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>buildnumber-maven-plugin</artifactId>
-            <configuration>
-              <revisionOnScmFailure>no_revision</revisionOnScmFailure>
-            </configuration>
             <executions>
               <execution>
+                <id>generate-scm-revision</id>
                 <phase>initialize</phase>
                 <goals>
                   <goal>create</goal>
                 </goals>
+                <configuration>
+                  <revisionOnScmFailure>no_revision</revisionOnScmFailure>
+                  <providerImplementations>
+                    <svn>javasvn</svn>
+                  </providerImplementations>
+                </configuration>
               </execution>
             </executions>
           </plugin>
