--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.exoplatform</groupId>
   <artifactId>exo.parent</artifactId>
-  <version>7.1</version>
+  <version>7.2-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo parent POM</name>
   <description>Provides default project configuration for eXo projects</description>
@@ -27,9 +27,9 @@
     <url>http://builder.exoplatform.org/hudson</url>
   </ciManagement>
   <scm>
-    <connection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/7.1</connection>
-    <developerConnection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/7.1</developerConnection>
-    <url>http://fisheye.exoplatform.org/browse/projects/parent/tags/7.1</url>
+    <connection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/7</connection>
+    <developerConnection>scm:svn:http://svn.exoplatform.org/projects/parent/tags/7</developerConnection>
+    <url>http://fisheye.exoplatform.org/browse/projects/parent/tags/7</url>
   </scm>
   <distributionManagement>
     <repository>
