--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.exoplatform</groupId>
   <artifactId>exo.parent</artifactId>
-  <version>8</version>
+  <version>8.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo parent POM</name>
   <description>Provides default project configuration for eXo projects</description>
@@ -115,11 +115,13 @@
     <!-- Others versions -->
     <!-- *************** -->
     <version.animal-sniffer.enforcer-rule>1.5</version.animal-sniffer.enforcer-rule>
-    <!-- ***************** -->
-    <!-- Repositories URLs -->
-    <!-- ***************** -->
-    <exo.releases.repo.url>http://repository.exoplatform.org/service/local/staging/deploy/maven2/</exo.releases.repo.url>
-    <exo.snapshots.repo.url>http://repository.exoplatform.org/content/repositories/exo-snapshots</exo.snapshots.repo.url>
+    <version.wagon-webdav-jackrabbit>1.0-beta-7</version.wagon-webdav-jackrabbit>
+    <!-- **************************************** -->
+    <!-- Repositories URLs                        -->
+    <!-- Using DAV for large artifacts - PAR-156  -->
+    <!-- **************************************** -->
+    <exo.releases.repo.url>dav:http://repository.exoplatform.org/service/local/staging/deploy/maven2/</exo.releases.repo.url>
+    <exo.snapshots.repo.url>dav:http://repository.exoplatform.org/content/repositories/exo-snapshots</exo.snapshots.repo.url>
     <exo.public.repo.url>http://repository.exoplatform.org/public/</exo.public.repo.url>
     <!-- ************** -->
     <!-- Build settings -->
@@ -466,6 +468,19 @@
         </plugin>
       </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <dependencies>
+          <dependency>
+            <groupId>org.apache.maven.wagon</groupId>
+            <artifactId>wagon-webdav-jackrabbit</artifactId>
+            <version>${version.wagon-webdav-jackrabbit}</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+    </plugins>
   </build>
   <profiles>
     <profile>
