PAR-183 : Minimum version of maven to use by default : 3.0.4

--- a/pom.xml
+++ b/pom.xml
@@ -175,6 +175,9 @@
     <defaulteXoReleaseProfiles>release</defaulteXoReleaseProfiles>
     <releaseProfiles>${defaulteXoReleaseProfiles}</releaseProfiles>
   </properties>
+  <prerequisites>
+    <maven>${maven.min.version}</maven>
+  </prerequisites>
   <build>
     <pluginManagement>
       <!-- All plugins ordered by shortname (antrun, assembly ...) -->
