[PAR-169] - pluginManagement : Upgrade org.apache.maven.plugins:maven-enforcer-plugin 1.0-beta-1 -> 1.1.1

--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
     <version.eclipse.plugin>2.8</version.eclipse.plugin>
     <version.ear.plugin>2.8</version.ear.plugin>
     <version.ejb.plugin>2.3</version.ejb.plugin>
-    <version.enforcer.plugin>1.0-beta-1</version.enforcer.plugin>
+    <version.enforcer.plugin>1.1.1</version.enforcer.plugin>
     <version.exec.plugin>1.1.1</version.exec.plugin>
     <version.exobuild.plugin>1.2.2</version.exobuild.plugin>
     <version.exopc.plugin>1.0.5</version.exopc.plugin>
