--- a/pom.xml
+++ b/pom.xml
@@ -117,7 +117,7 @@
     <version.surefire.plugin>2.12.4</version.surefire.plugin>
     <version.taglist.plugin>2.4</version.taglist.plugin>
     <version.versions.plugin>1.3.1</version.versions.plugin>
-    <version.war.plugin>2.1-beta-1</version.war.plugin>
+    <version.war.plugin>2.3</version.war.plugin>
     <!-- *************** -->
     <!-- Others versions -->
     <!-- *************** -->
