--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
   <packaging>pom</packaging>
   <name>eXo parent POM</name>
   <description>Provides default project configuration for eXo projects</description>
-  <url>${exo.sites.url}</url>
+  <url>${site.url}</url>
   <licenses>
     <license>
       <name>agpl</name>
@@ -60,7 +60,7 @@
     </snapshotRepository>
     <site>
       <id>sites.exoplatform.org</id>
-      <url>${exo.sites.deploy.url}</url>
+      <url>${site.deploy.url}</url>
     </site>
   </distributionManagement>
   <properties>
@@ -130,8 +130,13 @@
     <exo.releases.repo.url>dav:http://repository.exoplatform.org/service/local/staging/deploy/maven2/</exo.releases.repo.url>
     <exo.snapshots.repo.url>dav:http://repository.exoplatform.org/content/repositories/exo-snapshots</exo.snapshots.repo.url>
     <exo.public.repo.url>http://repository.exoplatform.org/public/</exo.public.repo.url>
-    <exo.sites.deploy.url>file://${user.home}/.exo/sites</exo.sites.deploy.url>
-    <exo.sites.url>http://sites.exoplatform.org</exo.sites.url>
+    <!-- **************************************** -->
+    <!-- Site URL                                 -->
+    <!-- **************************************** -->
+    <exo.site.base.url>http://repository.exoplatform.org/content/sites</exo.site.base.url>
+    <site.name>maven-parent-pom-site</site.name>
+    <site.url>${exo.site.base.url}/${site.name}</site.url>
+    <site.deploy.url>dav:${site.url}</site.deploy.url>
     <!-- ************** -->
     <!-- Build settings -->
     <!-- ************** -->
