--- a/pom.xml
+++ b/pom.xml
@@ -133,8 +133,8 @@
     <!-- **************************************** -->
     <!-- Site URL                                 -->
     <!-- **************************************** -->
-    <exo.site.base.url>http://repository.exoplatform.org/content/sites</exo.site.base.url>
-    <site.name>maven-parent-pom-site</site.name>
+    <exo.site.base.url>http://repository.exoplatform.org/content/sites/maven</exo.site.base.url>
+    <site.name>maven-parent-pom-master-site</site.name>
     <site.url>${exo.site.base.url}/${site.name}</site.url>
     <site.deploy.url>dav:${site.url}</site.deploy.url>
     <!-- ************** -->
