--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
     <!-- Site URL                                 -->
     <!-- **************************************** -->
     <exo.site.base.url>https://projects.exoplatform.org</exo.site.base.url>
-    <site.name>maven-parent-pom</site.name>
+    <site.name>maven-parent-pom-master</site.name>
     <site.url>${exo.site.base.url}/${site.name}</site.url>
     <site.deploy.url>dav:${site.url}</site.deploy.url>
     <!-- ************** -->
