--- a/pom.xml
+++ b/pom.xml
@@ -122,7 +122,7 @@
     <!-- Others versions -->
     <!-- *************** -->
     <version.animal-sniffer.enforcer-rule>1.5</version.animal-sniffer.enforcer-rule>
-    <version.wagon-webdav-jackrabbit>1.0-beta-7</version.wagon-webdav-jackrabbit>
+    <version.wagon-webdav-jackrabbit>2.2</version.wagon-webdav-jackrabbit>
     <!-- **************************************** -->
     <!-- Repositories URLs                        -->
     <!-- Using DAV for large artifacts - PAR-156  -->
