--- a/pom.xml
+++ b/pom.xml
@@ -90,9 +90,7 @@
     <!-- **************************************** -->
     <!-- Site URL                                 -->
     <!-- **************************************** -->
-    <exo.site.base.url>https://projects.exoplatform.org</exo.site.base.url>
-    <site.name>maven-parent-pom-master</site.name>
-    <site.url>${exo.site.base.url}/${site.name}/</site.url>
+    <site.url>https://projects.exoplatform.org/</site.url>
     <site.deploy.url>dav:${site.url}</site.deploy.url>
     <!-- **************** -->
     <!-- Plugins versions -->
