PAR-134: Generate changelog only for the current version

--- a/pom.xml
+++ b/pom.xml
@@ -877,6 +877,7 @@
         <version>${version.changes.plugin}</version>
         <configuration>
           <useJql>true</useJql>
+          <onlyCurrentVersion>true</onlyCurrentVersion>
         </configuration>
       </plugin>
       <plugin>
