PAR-134: Fix changes report config

--- a/pom.xml
+++ b/pom.xml
@@ -881,6 +881,10 @@
         <configuration>
           <useJql>true</useJql>
           <onlyCurrentVersion>true</onlyCurrentVersion>
+          <columnNames>Type,Key,Summary,Assignee,Status,Resolution,Fix Version</columnNames>
+          <sortColumnNames>Type,Key DESC</sortColumnNames>
+          <resolutionIds>Unresolved,Fixed,Won't Fix,Duplicate,Incomplete,Cannot Reproduce</resolutionIds>
+          <statusIds>Resolved,Closed</statusIds>
         </configuration>
       </plugin>
       <plugin>
